--- a/config/sync/language/fr/views.view.lotto_stats_balls.yml
+++ b/config/sync/language/fr/views.view.lotto_stats_balls.yml
@@ -24,6 +24,8 @@ display:
         frequency:
           label: 'Fréquence de sortie'
           suffix: ' jours'
+        custom_last_date:
+          label: 'Dernière sortie'
       exposed_form:
         options:
           submit_button: Appliquer
