Add delta custom views field

--- a/web/modules/custom/jpf_views/translations/jpf_views.fr.po
+++ b/web/modules/custom/jpf_views/translations/jpf_views.fr.po
@@ -21,3 +21,9 @@ msgstr "Meilleur jour (champ personnalisé)"
 
 msgid "Translatable custom best day."
 msgstr "Meilleur jour traductible."
+
+msgid "Delta"
+msgstr "Delta"
+
+msgid "Delta between last and frequency."
+msgstr "Delta entre le dernier tirage et la fréquence."
