--- a/config/sync/language/fr/views.view.files.yml
+++ b/config/sync/language/fr/views.view.files.yml
@@ -73,6 +73,8 @@ display:
           label: Entité
         type:
           label: "Type d'entité"
+        module:
+          label: 'Enregistrement du module'
         count:
           label: "Nombre d'utilisations"
           format_plural_string: !!binary MQNAY291bnQ=
@@ -89,3 +91,4 @@ display:
         fid:
           exception:
             title: Tout
+          title: "Information d'utilisation du fichier {{ arguments.fid }}"
