--- a/web/modules/custom/jpf_home/translations/jpf_home.fr.po
+++ b/web/modules/custom/jpf_home/translations/jpf_home.fr.po
@@ -10,8 +10,5 @@ msgstr "Personnalisé"
 msgid "Jean-Piarre Foucault"
 msgstr "Jean-Piarre Foucault"
 
-msgid "Work in progress"
-msgstr "Travail en cours"
-
-msgid "Coming soon..."
-msgstr "A venir"
+msgid "Last draw"
+msgstr "Dernier tirage"
