Init last predict

--- a/web/modules/custom/jpf_home/translations/jpf_home.fr.po
+++ b/web/modules/custom/jpf_home/translations/jpf_home.fr.po
@@ -12,3 +12,6 @@ msgstr "Jean-Piarre Foucault"
 
 msgid "Last draw"
 msgstr "Dernier tirage"
+
+msgid "Last prediction"
+msgstr "Dernière prédiction"
