--- a/web/modules/custom/jpf_home/translations/jpf_home.fr.po
+++ b/web/modules/custom/jpf_home/translations/jpf_home.fr.po
@@ -15,3 +15,9 @@ msgstr "Dernier tirage"
 
 msgid "Last prediction"
 msgstr "Dernière prédiction"
+
+msgid "Lucky ball "
+msgstr "Boule chance "
+
+msgid "Ball "
+msgstr "Boule "
