--- a/config/sync/language/fr/views.view.files.yml
+++ b/config/sync/language/fr/views.view.files.yml
@@ -28,6 +28,7 @@ display:
           label: 'Utilisé dans'
           alter:
             path: 'admin/content/files/usage/{{ fid }}'
+          format_plural_string: !!binary QGNvdW50IHBsYWNlA0Bjb3VudCBwbGFjZXM=
         operations:
           label: Actions
       pager:
