--- a/web/modules/custom/jpf_stats/translations/jpf_stats.fr.po
+++ b/web/modules/custom/jpf_stats/translations/jpf_stats.fr.po
@@ -1,23 +1,37 @@
+# $Id$
+#
+# French translation of Drupal (general)
+# Copyright YEAR NAME <EMAIL@ADDRESS>
+# Generated from files:
+#  modules/custom/jpf_stats/jpf_stats.info.yml: n/a
+#  modules/custom/jpf_stats/src/Commands/FillCommands.php: n/a
+#
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2025-07-19 04:35+0200\n"
+"PO-Revision-Date: 2025-07-19 04:35+0200\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: French <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+#: modules/custom/jpf_stats/jpf_stats.info.yml:0
 msgid "JPF : Data stats"
 msgstr "JPF : Statistiques des données"
 
+#: modules/custom/jpf_stats/jpf_stats.info.yml:0
 msgid "All features for stats."
 msgstr "Contient les fonctionnalités nécessaires pour les statistiques."
 
+#: modules/custom/jpf_stats/jpf_stats.info.yml:0
+msgid "Custom"
+msgstr "Personnalisé"
+
+#: modules/custom/jpf_stats/src/Commands/FillCommands.php:36
 msgid "Invalid current version."
 msgstr "Version courante invalide."
 
-msgid "Fill stats in database."
-msgstr "Remplissage des statistiques dans la base de données."
-
-msgid "Initialization."
-msgstr "Initialisation."
-
-msgid "An error occurred."
-msgstr "Une erreur est survenue."
-
-msgid "Import stats : @type @chunk / @count"
-msgstr "Import des statistiques : @type @chunk / @count"
-
-msgid "stats generated"
-msgstr "statistiques générées"
