--- a/web/modules/custom/jpf_store/translations/jpf_store.fr.po
+++ b/web/modules/custom/jpf_store/translations/jpf_store.fr.po
@@ -1,40 +1,65 @@
+# $Id$
+#
+# French translation of Drupal (general)
+# Copyright YEAR NAME <EMAIL@ADDRESS>
+# Generated from files:
+#  modules/custom/jpf_store/jpf_store.info.yml: n/a
+#  modules/custom/jpf_store/src/Commands/FillCommands.php: n/a
+#  modules/custom/jpf_store/src/Entity/Draw.php: n/a
+#  modules/custom/jpf_store/src/Services/CsvHelper.php: n/a
+#
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2025-07-19 04:35+0200\n"
+"PO-Revision-Date: 2025-07-19 04:35+0200\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: French <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+#: modules/custom/jpf_store/jpf_store.info.yml:0
 msgid "JPF : Data store"
 msgstr "JPF : Stockage des données"
 
+#: modules/custom/jpf_store/jpf_store.info.yml:0
 msgid "All features for storing data."
 msgstr "Contient les fonctionnalités nécessaires pour stocker les données."
 
-msgid "Import data to database."
-msgstr "Import des données dans la base de données."
+#: modules/custom/jpf_store/jpf_store.info.yml:0
+msgid "Custom"
+msgstr "Personnalisé"
 
-msgid "Initialization."
-msgstr "Initialisation."
-
-msgid "An error occurred."
-msgstr "Une erreur est survenue."
-
+#: modules/custom/jpf_store/src/Commands/FillCommands.php:65
 msgid "Do not use \"versions\" and \"all\" options together."
 msgstr "Ne pas utiliser les options \"versions\" et \"all\" ensemble."
 
+#: modules/custom/jpf_store/src/Commands/FillCommands.php:71
 msgid "You must use at least one option between \"versions\" and \"all\"."
 msgstr "Vous devez utiliser au moins une option entre \"versions\" et \"all\"."
 
+#: modules/custom/jpf_store/src/Commands/FillCommands.php:80
 msgid "This version is undefined or not allowed : @item"
 msgid_plural "These versions are undefined or not allowed : @items"
 msgstr[0] "Cette version n'est pas définie ou n'est pas autorisée : @item"
 msgstr[1] "Ces versions ne sont pas définies ou ne sont pas autorisées : @items"
 
-msgid "Import data : version @chunk / @count"
-msgstr "Import des données : version @chunk / @count"
-
+#: modules/custom/jpf_store/src/Entity/Draw.php:17
 msgid "Draw"
 msgstr "Tirage"
 
+#: modules/custom/jpf_store/src/Entity/Draw.php:18
 msgid "draw"
 msgstr "tirage"
 
+#: modules/custom/jpf_store/src/Entity/Draw.php:19
 msgid "draws"
 msgstr "tirages"
 
+#: modules/custom/jpf_store/src/Services/CsvHelper.php:47
 msgid "Not enough data in the CSV file"
 msgstr "Le fichier CSV ne contient pas assez de données."
+
