--- a/web/modules/custom/jpf_utils/translations/jpf_utils.fr.po
+++ b/web/modules/custom/jpf_utils/translations/jpf_utils.fr.po
@@ -1,17 +1,42 @@
+# $Id$
+#
+# French translation of Drupal (general)
+# Copyright YEAR NAME <EMAIL@ADDRESS>
+# Generated from files:
+#  modules/custom/jpf_utils/jpf_utils.info.yml: n/a
+#  modules/custom/jpf_utils/jpf_utils.links.menu.yml: n/a
+#  modules/custom/jpf_utils/src/Entity/BallEntityBase.php: n/a
+#
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2025-07-19 04:35+0200\n"
+"PO-Revision-Date: 2025-07-19 04:35+0200\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: French <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+#: modules/custom/jpf_utils/jpf_utils.info.yml:0
 msgid "JPF : Utils"
 msgstr "JPF : Utilitaires"
 
+#: modules/custom/jpf_utils/jpf_utils.info.yml:0
 msgid "Transverse features & helpers for all modules."
 msgstr "Contient les fonctionnalités transverses et utiles à tous les modules."
 
-msgid "@success @success_message, @error errors."
-msgstr "@success @success_message, @error erreurs."
+#: modules/custom/jpf_utils/jpf_utils.info.yml:0
+msgid "Custom"
+msgstr "Personnalisé"
 
-msgid "An unknown error occurred."
-msgstr "Une erreur inconnue est survenue."
+#: modules/custom/jpf_utils/jpf_utils.links.menu.yml:0
+msgid "Python"
+msgstr "Python"
 
-msgid "An error occurred during process of @operation with args : @args"
-msgstr "Une erreur est survenue durant l'opération @operation avec les arguments : @args"
-
+#: modules/custom/jpf_utils/src/Entity/BallEntityBase.php:54
 msgid "Version"
 msgstr "Version"
+
